--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -3,6 +3,8 @@
 // Imports --------------------------------------------------------------
 
 @import "defaults";
+@import "structure";
+@import "theme";
 
 /* Layout -------------------------------------------------------------- */
 
@@ -10,9 +12,10 @@
 
 // change '.container' to match your HTML container element
 // or @extend it to apply multiple containers on your site.
-.container {
+#container {
   @include container;
-  @include show-grid("grid.png"); }
+  @include show-grid("grid.png"); 
+}
 
 // show-grid loads a 64+16x24 grid image by default
 // For other grid settings, run `compass grid-img 30+10x20`
