Working on xls upload.

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -4,6 +4,7 @@
 
 @import "defaults";
 @import "structure";
+@import "form";
 @import "theme";
 
 /* Layout -------------------------------------------------------------- */
