Replaced xls with tab.

--- a/app/views/uploads/_form.html.haml
+++ b/app/views/uploads/_form.html.haml
@@ -2,7 +2,7 @@
   = render "shared/error_messages", :target => @upload
 
   = f.inputs do
-    = f.input :xls
+    = f.input :tab
 
   = f.buttons do
     = f.commit_button
