--- a/app/views/uploads/show.html.haml
+++ b/app/views/uploads/show.html.haml
@@ -1,8 +1,9 @@
-%p#notice= notice
+- content_for :secondary_navigation do
+  %li.active= link_to 'New Upload', new_upload_path
 
 %p
   %b Downloaded at:
-  = @upload.downloaded_at
+  = l(@upload.downloaded_at, :format => :long)
 
 = link_to 'Edit', edit_upload_path(@upload)
 \|
