--- a/app/views/uploads/index.html.haml
+++ b/app/views/uploads/index.html.haml
@@ -12,7 +12,7 @@
 
   - @uploads.each do |upload|
     %tr
-      %td= upload.downloaded_at
+      %td= l(upload.downloaded_at, :format => :long)
       %td= link_to 'Show', upload
       %td= link_to 'Edit', edit_upload_path(upload)
       %td= link_to 'Destroy', upload, :confirm => 'Are you sure?', :method => :delete
