--- a/app/views/uploads/show.html.haml
+++ b/app/views/uploads/show.html.haml
@@ -2,8 +2,15 @@
   %li.active= link_to 'New Upload', new_upload_path
 
 %p
+  %b File name:
+  = @upload.tab.original_filename
+%p
   %b Downloaded at:
   = l(@upload.downloaded_at, :format => :long)
+
+%p
+  %b Upload details count:
+  = @upload.upload_details.count
 
 = link_to 'Edit', edit_upload_path(@upload)
 \|
