--- a/app/views/uploads/index.html.haml
+++ b/app/views/uploads/index.html.haml
@@ -3,18 +3,8 @@
 
 - title 'Listing Uploads'
 
-%table
+%table.table
   %tr
+    %th Filename
     %th Downloaded at
-    %th
-    %th
-    %th
-
-  - @uploads.each do |upload|
-    %tr
-      %td= l(upload.downloaded_at, :format => :long)
-      %td= link_to 'Show', upload
-      %td= link_to 'Edit', edit_upload_path(upload)
-      %td= link_to 'Destroy', upload, :confirm => 'Are you sure?', :method => :delete
-
-%br
+  = render @uploads
