--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -2,4 +2,4 @@
   %td= expense.bankaccount
   %td= l(expense.transaction_date, :format => :default)
   %td= number_to_currency(expense.transaction_amount)
-  %td= number_to_currency(expense.ending_balance)
+  %td= number_to_currency(expense.balance)
