Store amounts as BigDecimals.

--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -3,3 +3,4 @@
   %td= l(expense.transaction_date, :format => :default)
   %td= number_to_currency(expense.transaction_amount)
   %td= number_to_currency(expense.balance)
+  / %td= expense.description
