--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -3,6 +3,7 @@
 // Imports --------------------------------------------------------------
 
 @import "defaults";
+@import "fancy-buttons";
 @import "structure";
 @import "form";
 @import "theme";
