--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -1,3 +1,8 @@
+- content_for :secondary_navigation do
+  %li= link_to 'New Upload', new_upload_path
+
+- title 'Listing Expenses'
+
 %table.table
   %tr
     %th Bankaccount
