--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -1,5 +1,5 @@
 %tr[expense]{ :class => "#{cycle('odd', 'even')}"}
-  %td= expense.bankaccount
+  %td= expense.account_number
   %td= l(expense.transaction_date, :format => :default)
   %td= number_to_currency(expense.transaction_amount)
   %td= number_to_currency(expense.balance)
