--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -1,13 +1,25 @@
 - content_for :secondary_navigation do
   %li= link_to 'New Upload', new_upload_path
 
+- content_for :sidebar do
+  .block
+    %h3 Header
+    .content
+      %ul
+        - @bank_accounts.each do |bank_account|
+          %li
+            - if bank_account == @bank_account
+              = bank_account.account_number
+            - else
+              = link_to(bank_account.account_number, bank_account_expenses_path(bank_account, :upload_id => @upload))
+
 - title 'Listing Expenses'
 
 %table.table
   %tr
-    %th Bankaccount
     %th Transaction date
-    %th Transaction amount
+    %th Debit
+    %th Credit
     %th Balance
     / %th Description
   = render @expenses
