Spec'd expenses for current upload.

--- a/app/stylesheets/_structure.scss
+++ b/app/stylesheets/_structure.scss
@@ -138,6 +138,9 @@ aside {
 
 .table {
   border: none;
+  .debit, .credit, .balance {
+    text-align: right;
+  }
   th {
     text-align: left;
     @include padding-leader(0.35);
