Pagination for expenses.

--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -22,3 +22,8 @@
     %th.credit Credit
     %th.balance Balance
   = render @expenses
+
+.action-bars
+  -# A button will be placed in the near future?
+  &nbsp;
+  = will_paginate @expenses
