BankAccount.account_number is a write-once attribute.

--- a/app/views/bank_accounts/_form.html.haml
+++ b/app/views/bank_accounts/_form.html.haml
@@ -2,8 +2,9 @@
   = render "shared/error_messages", :target => @bank_account
 
   = f.inputs do
-    = f.input :account_number
+    = f.input :account_number, :input_html => { :disabled => true }
     = f.input :description
+      
     
   = f.buttons do
     = f.commit_button
