--- a/app/views/layouts/_javascripts.html.haml
+++ b/app/views/layouts/_javascripts.html.haml
@@ -1,5 +1,4 @@
-= javascript_include_tag :defaults
-/ = google_jqueryui
+= javascript_include_tag(:defaults)
 
 -#  Append your own using content_for :javascripts
 = yield :javascripts
