Added Creditor model, add creditor to expense.

--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -1,5 +1,6 @@
 %tr[expense]{ :class => "#{cycle('odd', 'even')}"}
   %td= l(expense.transaction_date, :format => :default)
+  %td= expense.creditor.try(:name)
   %td.debit
     - if expense.transaction_amount.negative?
       = number_to_currency(expense.transaction_amount, :unit => '')
@@ -7,3 +8,5 @@
     - if expense.transaction_amount.positive?
       = number_to_currency(expense.transaction_amount, :unit => '')
   %td.balance= number_to_currency(expense.balance, :unit => '')
+  %td
+    = link_to('Edit', edit_bank_account_expense_path(@bank_account, expense))
