--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -18,9 +18,11 @@
 %table.table
   %tr
     %th Transaction date
+    %th Creditor
     %th.debit Debit
     %th.credit Credit
     %th.balance Balance
+    %th
   = render @expenses
 
 .action-bars
