Display balance as bar chart.

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -7,6 +7,7 @@
 @import "structure";
 @import "form";
 @import "theme";
+@import "amount";
 
 /* Layout -------------------------------------------------------------- */
 
