--- a/app/views/bank_accounts/_bank_account.html.haml
+++ b/app/views/bank_accounts/_bank_account.html.haml
@@ -1,6 +1,7 @@
 %tr[bank_account]{ :class => "#{cycle('odd', 'even')}"}
   %td= "#{bank_account}"
   %td= bank_account.description
-  %td.balance= number_to_currency(bank_account.balance, :unit => '')
+  %td.balance
+    = balance_for(bank_account)
   %td
     = link_to('Edit', edit_bank_account_path(bank_account))
