--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -19,6 +19,7 @@
   %tr
     %th Transaction date
     %th Creditor
+    %th Category
     %th.debit Debit
     %th.credit Credit
     %th.balance Balance
