--- a/app/views/expenses/_form.html.haml
+++ b/app/views/expenses/_form.html.haml
@@ -7,8 +7,8 @@
       });
     });
 
-= semantic_form_for @expense do |f|
-  = render "shared/error_messages", :target => @expense
+= semantic_form_for expense do |f|
+  = render "shared/error_messages", :target => expense
 
   = f.inputs do
     = f.input :transaction_date, :input_html => { :disabled => true }
@@ -22,4 +22,4 @@
 
   = f.buttons do
     = f.commit_button
-    %li= link_to "Cancel", bank_account_expenses_path(@bank_account)
+    %li= link_to "Cancel", bank_account_expenses_path(bank_account)
