--- a/app/stylesheets/ie6.scss
+++ b/app/stylesheets/ie6.scss
@@ -2,3 +2,12 @@ a.button, form button {
   background-image: none !important;
   &:hover, &:active, &:focus {
     background-image: none !important; } }
+// IE 6 doesn't support max-height
+// we use height instead, but this forces the menu to always be this tall
+* {
+  html {
+    .ui-autocomplete {
+      height: 180px;
+    }
+  }
+}
