--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,9 +11,9 @@
           %ul
             %li{:class => controller.controller_name == 'bank_accounts' && 'active' }= link_to "Bank Accounts", bank_accounts_path
             %li{:class => controller.controller_name == 'expenses' && 'active' }= link_to "Expenses", expenses_path
+            %li{:class => controller.controller_name == 'categories' && 'active' }= link_to "Categories", categories_path(:roots => true)
             %li{:class => controller.controller_name == 'creditors' && 'active' }= link_to "Creditors", creditors_path
             %li{:class => controller.controller_name == 'uploads' && 'active' }= link_to "Uploads", uploads_path
-            %li= link_to "Login", '#'
 
       %section#content
         .block
