--- a/app/views/categories/_category.html.haml
+++ b/app/views/categories/_category.html.haml
@@ -3,5 +3,5 @@
   - unless params[:roots]
     %td= category.parent.name
   %td
-    = link_to('Edit', edit_category_path(category, @pass_through)) + " | "
-    = link_to 'Destroy', category_path(category, @pass_through.merge(:destroy => true)), :confirm => 'Are you sure?', :method => :delete
+    = link_to('Edit', edit_category_path(category, pass_through)) + " | "
+    = link_to 'Destroy', category_path(category, pass_through.merge(:destroy => true)), :confirm => 'Are you sure?', :method => :delete
