--- a/app/views/creditors/edit.html.haml
+++ b/app/views/creditors/edit.html.haml
@@ -4,4 +4,4 @@
 
 - title "Edit Creditor"
 
-= render 'form', :creditor => @creditor
+= render 'form', :creditor => @creditor, :pass_through => @pass_through
