--- a/app/views/creditors/index.html.haml
+++ b/app/views/creditors/index.html.haml
@@ -7,7 +7,7 @@
   %tr
     %th Name
     %th
-  = render @creditors
+  = render @creditors, :pass_through => @pass_through
 .action-bars
   -# A button will be placed in the near future?
   &nbsp;
