--- a/app/views/creditors/new.html.haml
+++ b/app/views/creditors/new.html.haml
@@ -4,4 +4,4 @@
 
 - title "Add a new Creditor"
 
-= render 'form', :creditor => @creditor
+= render 'form', :creditor => @creditor, :pass_through => @pass_through
