--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -1,7 +1,7 @@
 = semantic_form_for(category) do |f|
   = render "shared/error_messages", :target => category
 
-  - @pass_through.each do |k,v|
+  - pass_through.each do |k,v|
     = hidden_field_tag k, v
 
   = f.inputs do
@@ -10,4 +10,4 @@
 
   = f.buttons do
     = f.commit_button
-    %li= link_to "Cancel", categories_path(@pass_through)
+    %li= link_to "Cancel", categories_path(pass_through)
