--- a/app/views/categories/edit.html.haml
+++ b/app/views/categories/edit.html.haml
@@ -1,7 +1,7 @@
 - content_for :secondary_navigation do
   %li= link_to "« Back", categories_path(@pass_through)
-  %li.active= link_to "New Category", new_category_path(@pass_through)
+  %li.active= link_to "New Category", new_category_path
 
-- title "Add a new Category"
+- title "Edit Category"
 
 = render 'form', :category => @category, :pass_through => @pass_through
