--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -11,7 +11,7 @@
     - unless params[:roots]
       %th Main Category
     %th
-  = render @categories
+  = render @categories, :pass_through => @pass_through
 .action-bars
   -# A button will be placed in the near future?
   &nbsp;
