--- a/app/views/expenses/_form.html.haml
+++ b/app/views/expenses/_form.html.haml
@@ -11,7 +11,7 @@
 = semantic_form_for(expense) do |f|
   = render "shared/error_messages", :target => expense
 
-  - @pass_through.each do |k,v|
+  - pass_through.each do |k,v|
     = hidden_field_tag k, v
 
   = f.inputs do
@@ -26,4 +26,4 @@
 
   = f.buttons do
     = f.commit_button
-    %li= link_to "Cancel", bank_account_expenses_path(bank_account, @pass_through)
+    %li= link_to "Cancel", bank_account_expenses_path(bank_account, pass_through)
