--- a/app/views/expenses/edit.html.haml
+++ b/app/views/expenses/edit.html.haml
@@ -3,4 +3,4 @@
 
 - title "Edit Expense"
 
-= render 'form', :expense => @expense, :bank_account => @bank_account
+= render 'form', :expense => @expense, :bank_account => @bank_account, :pass_through => @pass_through
