Format main category form element.

--- a/app/views/categories/_form.html.haml
+++ b/app/views/categories/_form.html.haml
@@ -6,7 +6,7 @@
 
   = f.inputs do
     = f.input :name
-    = f.input :parent, :collection => Category.roots
+    = category_parent_input f, category
 
   = f.buttons do
     = f.commit_button
