--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -10,6 +10,9 @@
     %th Name
     - unless params[:roots]
       %th Main Category
+    %th.debit Debit
+    %th.credit Credit
+    %th.total Total
     %th
   = render @categories, :pass_through => @pass_through
 .action-bars
