--- a/app/views/expenses/_expense.html.haml
+++ b/app/views/expenses/_expense.html.haml
@@ -1,13 +1,16 @@
 %tr[expense]{ :class => "#{cycle('odd', 'even')}"}
   %td= l(expense.transaction_date, :format => :default)
-  %td= expense.creditor.try(:name)
-  %td= expense.category.try(:name)
+  %td
+    -# TODO: Create a helper for this:
+    = expense.creditor.try(:name) || '-'
+    %br/
+    = expense.category.try(:name)
   %td.debit
     - if expense.transaction_amount.negative?
       = number_to_currency(expense.transaction_amount, :unit => '')
   %td.credit
     - if expense.transaction_amount.positive?
       = number_to_currency(expense.transaction_amount, :unit => '')
-  %td.balance= number_to_currency(expense.balance, :unit => '')
+  %td.balance= visual_amount(expense.balance, bank_account.expenses.max_balance)
   %td
     = link_to('Edit', edit_bank_account_expense_path(bank_account, expense, pass_through))
