--- a/app/views/expenses/index.html.haml
+++ b/app/views/expenses/index.html.haml
@@ -18,8 +18,8 @@
 %table.table
   %tr
     %th Transaction date
-    %th Creditor
-    %th Category
+    %th
+      Creditor/Category
     %th.debit Debit
     %th.credit Credit
     %th.balance Balance
