--- a/app/views/expenses/_form.html.haml
+++ b/app/views/expenses/_form.html.haml
@@ -8,7 +8,8 @@
 
       $("#expense_category_id").autocompleteFromGroupedSelect();
     });
-= semantic_form_for(expense) do |f|
+
+= semantic_form_for([bank_account, expense]) do |f|
   = render "shared/error_messages", :target => expense
 
   - pass_through.each do |k,v|
