--- a/app/views/layouts/_javascripts.html.haml
+++ b/app/views/layouts/_javascripts.html.haml
@@ -1,4 +1,4 @@
-= javascript_include_tag(:defaults, 'jquery-ui-1.8.7.custom.min')
+= javascript_include_tag(:defaults, 'jquery-ui-1.8.7.custom.min', 'highcharts')
 
 -#  Append your own using content_for :javascripts
 = yield :javascripts
